cha-pre-live-flux2/cha-eks-5b/namespaces/sbsrch-staging/namespace-sbsrch-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sbsrch-staging
  name: sbsrch-staging
